Responsive and fix top of bottom svg bg getting clipped

--- a/src/sections/intro-section.scss
+++ b/src/sections/intro-section.scss
@@ -3,6 +3,10 @@
 .col-name {
   padding-top: 300px;
   text-align: center;
+
+  @media (max-width: 767px) {
+    padding-top: 190px;
+  }
 }
 .name-box {
   display: inline-block;
